# test

./: Cargo.toml  README.md  cursor_rust_zk.md
zk/: Cargo.toml
zk/src/: ledger.rs  lib.rs  tx.rs  zkps.rs
zkchain-client/: Cargo.toml
zkchain-client/src/: main.rs
zkchain-node/: Cargo.toml
zkchain-node/src/: main.rs
