[workspace]
members = [
    "zk",
    "zkchain-node",
    "zkchain-client",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"

# ZK related
bulletproofs = "4"
curve25519-dalek-ng = "4.1"
merlin = "3"

# Crypto/signing
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

# Server
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde_with = "3"
parking_lot = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
