[package]
name = "zk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
rand_core.workspace = true
bulletproofs.workspace = true
curve25519-dalek-ng.workspace = true
merlin.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true

parking_lot.workspace = true
