[package]
name = "zkchain-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
clap.workspace = true
reqwest.workspace = true
zk = { path = "../zk" }
base64.workspace = true
hex.workspace = true
tokio.workspace = true
