[package]
name = "zkchain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tokio.workspace = true
serde_with.workspace = true
parking_lot.workspace = true
sha2.workspace = true
zk = { path = "../zk" }
hex.workspace = true
